<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keyboardNavigationCluster="true"
    android:background="@color/colorBackground"
    tools:context=".SignupActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@id/etFullname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/courseapplogo" />

    <EditText
        android:id="@+id/etFullname"
        android:layout_width="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_height="50dp"
        android:background="@drawable/myedit_text"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorAccent"
        android:drawableEnd="@drawable/ic_accountbox"
        app:layout_constraintBottom_toTopOf="@id/etEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_height="50dp"
        android:background="@drawable/myedit_text"
        android:padding="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:drawableEnd="@drawable/ic_email"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/etUname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFullname"/>


    <EditText
        android:id="@+id/etUname"
        android:layout_width="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_height="50dp"
        android:background="@drawable/myedit_text"
        android:drawableStart="@drawable/ic_action_user"
        android:ems="10"
        android:hint="@string/username"
        android:layout_marginTop="20dp"
        android:inputType="textPersonName"
        android:textColor="#808080"
        app:layout_constraintBottom_toTopOf="@id/etUpassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail"/>

    <EditText
        android:id="@+id/etUpassword"
        android:layout_width="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_height="50dp"
        android:background="@drawable/myedit_text"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/ic_action_password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/progress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etUname"/>


    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/etUpassword"
        app:layout_constraintBottom_toTopOf="@id/btnSignup"/>

    <Button
        android:id="@+id/btnSignup"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/button_background"
        android:text="@string/signup"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@id/tvHaveAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress" />

    <TextView
        android:id="@+id/tvHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Already have an account?"
        android:textColor="#808080"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/tvSignin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignup" />

    <TextView
        android:id="@+id/tvSignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHaveAccount" />

</androidx.constraintlayout.widget.ConstraintLayout>