<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorBackground"
    android:layout_height="match_parent"
    tools:context=".AccountActivity">
    <TextView
        android:id="@+id/tvAccName"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:scrollbars="horizontal"
        android:textColor="#000000"
        android:padding="10dp"
        android:background="@drawable/textview_border"
        android:layout_marginTop="200dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvAccEmail"
        app:drawableStartCompat="@drawable/ic_accountbox" />
    <TextView
        android:id="@+id/tvAccEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:scrollbars="horizontal"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="#000000"
        android:text="@string/email_id"
        android:background="@drawable/textview_border"
        android:textSize="18sp"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@id/tvAccName"
        app:layout_constraintTop_toBottomOf="@id/tvAccName"
        app:layout_constraintBottom_toTopOf="@id/tvAccUname"
        app:drawableStartCompat="@drawable/ic_email" />
    <TextView
        android:id="@+id/tvAccUname"
        android:layout_width="match_parent"
        android:layout_marginStart="10dp"
        android:layout_margin="10dp"
        android:layout_marginEnd="10dp"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:background="@drawable/textview_border"
        android:textColor="#000000"
        android:scrollbars="horizontal"
        android:padding="10dp"
        android:layout_marginBottom="100dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/tvAccName"
        app:layout_constraintTop_toBottomOf="@id/tvAccEmail"
        app:layout_constraintBottom_toTopOf="@id/btnLogout"
        app:drawableStartCompat="@drawable/ic_action_user" />
    <Button
        android:id="@+id/btnLogout"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginBottom="200dp"
        android:background="@drawable/button_background"
        android:text="@string/logout"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAccUname"
        app:layout_constraintBottom_toBottomOf="parent" />
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:itemIconSize="30dp"
        app:labelVisibilityMode="labeled"
        app:itemTextColor="@drawable/bnselected"
        app:itemIconTint="@drawable/bnselected"
        android:fitsSystemWindows="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/navigation_menu"/>
    <View
        android:id="@+id/viewDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"/>
</androidx.constraintlayout.widget.ConstraintLayout>