<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaidCourses">
    <TextView
        android:id="@+id/paidcourses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="Open the Top E-Learning sites with in the app. "
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:fontFamily="@font/actor"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toTopOf="@+id/scroll"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@id/paidcourses"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/skillshare"
                    android:textColor="@color/colorPrimary"
                    android:textSize="25sp"
                    android:padding="10dp"
                    android:fontFamily="@font/cantora_one"
                    android:background="@drawable/textview_border"/>

                <Button
                    android:id="@+id/skillshare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:layout_marginTop="10dp"
                    android:text="Skill Share"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/linkedin"
                    android:textColor="@color/colorPrimary"
                    android:textSize="25sp"
                    android:fontFamily="@font/cantora_one"
                    android:padding="10dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/textview_border"/>

                <Button
                    android:id="@+id/linkedin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:layout_marginTop="10dp"
                    android:text="Linkedin"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/masterclass"
                    android:textColor="@color/colorPrimary"
                    android:textSize="25sp"
                    android:padding="10dp"
                    android:fontFamily="@font/cantora_one"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/textview_border"/>

                <Button
                    android:id="@+id/masterclass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:text="Master Class"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/futurelearn"
                    android:textColor="@color/colorPrimary"
                    android:textSize="25sp"
                    android:padding="10dp"
                    android:fontFamily="@font/cantora_one"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/textview_border"/>

                <Button
                    android:id="@+id/futurelearn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:text="Future Learn"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:textColor="@color/colorWhite" />


            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>